# paxtools

./: .gitmodules  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
paxtools/: __main__.py  cli.py  sif.py  util.py
tests/: test_sif.py
tests/artifacts/: README.md  Wnt_signaling_pathway.sif  Wnt_signaling_pathway.xml  Wnt_signaling_pathway_extended.sif  pc2-14-denylist.txt
