[project]
name = "paxtools"
version = "6.0.0-0"
description = "Python wrapper for Paxtools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pandas>=3.0.0",
    "pytest>=9.0.2",
]

[project.scripts]
paxtools = "paxtools.cli:main"
