[project]
name = "paxtools"
version = "6.0.0.1"
description = "Python wrapper for Paxtools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [{ name = "Tristan F.-R", email = "pub.tristanf@gmail.com" }]
license = "MIT"
keywords = ['paxtools', 'cli']

classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Java'
]

[project.urls]
Repository = "https://github.com/tristan-f-r/paxtools/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pandas>=3.0.0",
    "pytest>=9.0.2",
]

[project.scripts]
paxtools = "paxtools.cli:main"
